src/test/deca/syntax/invalid/lexer/include_tests/include_no_sharp_lex.deca
// Description:
//    oubli de # devant le include
//
// Resultats:
//    Ligne 11 : les tokens ne sont pas les bons
//
// Historique:
//    cree le 09/01/2023
//

include "Math.decah"